Light theme as default

--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@ At my core, I am a Software Engineer and a Researcher in Computer Science. I bel
 
     </head>
 
-    <body class="dark-theme">
+    <body class="">
         <div class="container">
             <header class="header">
     <span class="header__inner">
