--- a/about-me/index.html
+++ b/about-me/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://arsal.me/about/</title><link rel="canonical" href="https://arsal.me/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://arsal.me/about/" /></head></html>
+<!DOCTYPE html><html><head><title>http://arsal.me/about/</title><link rel="canonical" href="http://arsal.me/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=http://arsal.me/about/" /></head></html>
