--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>http://arsal.me/about/</title><link rel="canonical" href="http://arsal.me/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=http://arsal.me/about/" /></head></html>
+<!DOCTYPE html><html><head><title>arsal.me/about/</title><link rel="canonical" href="arsal.me/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=arsal.me/about/" /></head></html>
