--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@ At my core, I am a Software Engineer and a Researcher in Computer Science. I bel
     <div class="logo">
         
             <span class="logo__mark">></span>
-            <span class="logo__text">$ cd /arsalasif/</span>
+            <span class="logo__text">$ cd /arsal.me/</span>
             <span class="logo__cursor" style=
                   "
                    
