--- a/404.html
+++ b/404.html
@@ -42,12 +42,12 @@
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Personal Site for Arsal Asif">
+<meta itemprop="description" content="Arsal Asif Website">
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://arsal.me"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Personal Site for Arsal Asif"/>
+<meta name="twitter:description" content="Arsal Asif Website"/>
 
 
 
@@ -86,7 +86,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li><li><a href="https://arsal.me/projects/">Projects</a></li>
     </ul>
 </nav>
 
