--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@ At my core, I am a Software Engineer and a Researcher in Computer Science. I bel
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li><li><a href="https://arsal.me/projects/">Projects</a></li>
     </ul>
 </nav>
 
@@ -145,7 +145,7 @@ At my core, I am a Software Engineer and a Researcher in Computer Science. I bel
 <p>At my core, I am a Software Engineer and a Researcher in Computer Science. I believe you need to be able to research to develop good software, and you need to be able to code to actualize your research ideas.</p>
 <p>As a software engineer, my core focus is on designing maintainable, efficient software. I am proficient in Data Structures and Algorithms. In my professional experience, I designed and developed a multi-tenant software for a SaaS model, employing best practices and architecture.</p>
 <p>As a researcher, my interests are Computer Vision and Deep Learning. My recent work is a Visual Saliency model for videos, where my model successfully achieved results that outperformed the previous state-of-the-art models. Based on my research, I have also authored a paper for the top-tier conference European Conference on Computer Vision (ECCV) 2020.</p>
-<p>If you need someone who can code as well as research, specifically related to Machine Learning/Computer Vision/Deep Learning, then you are at the right profile.</p>
+<p>If you need someone who can code as well as research, specifically related to Machine Learning/Computer Vision/Deep Learning, then you are at the right website.</p>
 <p>Reach out on <a href="https://www.linkedin.com/in/arsalasif/">LinkedIn</a>.</p>
 
             </div>
