--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Arsal Asif ">
-<meta name="description" content="Software Engineer, Machine Learning and Computer Vision" />
+<meta name="description" content="Software Engineer, Machine Learning/Computer Vision" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="#252627" />
@@ -43,12 +43,12 @@
 
 
 <meta itemprop="name" content="Arsal Asif">
-<meta itemprop="description" content="Personal Site for Arsal Asif">
+<meta itemprop="description" content="Arsal Asif Website">
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://arsal.me"/>
 
 <meta name="twitter:title" content="Arsal Asif"/>
-<meta name="twitter:description" content="Personal Site for Arsal Asif"/>
+<meta name="twitter:description" content="Arsal Asif Website"/>
 
 
 
@@ -88,7 +88,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://arsal.me/about/">About</a></li><li><a href="https://arsal.me/posts/">Posts</a></li><li><a href="https://arsal.me/projects/">Projects</a></li>
     </ul>
 </nav>
 
@@ -116,7 +116,7 @@
     <main aria-role="main">
         <div>
             <h1>Arsal Asif</h1>
-                <p>Software Engineer, Machine Learning and Computer Vision</p>
+                <p>Software Engineer, Machine Learning/Computer Vision</p>
                 <div>
                     &nbsp; <a href="mailto:asifma@myumanitoba.ca" target="_blank" rel="noopener" title="Email"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></a> &nbsp;&nbsp; <a href="https://github.com/arsalasif" target="_blank" rel="noopener" title="Github"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a> &nbsp;&nbsp; <a href="https://www.linkedin.com/in/arsalasif" target="_blank" rel="noopener" title="Linkedin"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a> &nbsp;
                 </div>
